<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.niyas.redditlikeapp.activities.RedditMakePostActivity">

    <include layout="@layout/common_toolbar"/>

    <EditText
        android:id="@+id/title_edit_txt"
        android:layout_below="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:inputType="text"
        android:maxLines="1"
        android:maxLength="50"
        android:hint="Title of Your Post" />

    <EditText
        android:id="@+id/body_edit_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLength="255"
        android:layout_below="@+id/title_edit_txt"
        android:hint="Body of Your Post" />
</RelativeLayout>
