<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/toolbar"
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize"
    android:background="?attr/colorPrimary"
    app:popupTheme="@style/AppTheme.PopupOverlay">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/page_header_txt_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="left|center_vertical"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_marginRight="5dp"
            android:textStyle="bold"
            android:layout_toLeftOf="@+id/post_txt_view"
            />

        <TextView
            android:id="@+id/post_txt_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:visibility="gone"
            android:layout_marginRight="7dp"
            android:text="@string/post"
            android:textColor="@color/white" />
    </RelativeLayout>
</android.support.v7.widget.Toolbar>